syntax = "proto3";

import "model/proto/task.proto";
import "auth/proto/auth.proto";

package taask.server.service;
option go_package = "github.com/taask/taask-server/service";

message Empty {}

service RunnerService {
	rpc AuthRunner(taask.server.auth.Attempt) returns (taask.server.auth.AttemptResponse);
	rpc RegisterRunner(RegisterRunnerRequest) returns (stream taask.server.model.Task);
	rpc UpdateTask(UpdateTaskRequest) returns (Empty);
}

message RegisterRunnerRequest {
	string Kind = 1;
	repeated string Tags = 2;
	taask.server.auth.Session Session = 3;
}

message UpdateTaskRequest {
	taask.server.model.TaskUpdate Update = 1;
	taask.server.auth.Session Session = 2;
}